--- a/core2imagedemo/.vscode/settings.json
+++ b/core2imagedemo/.vscode/settings.json
@@ -15,6 +15,11 @@
         "*.HLASM*": "hlasm",
         "*.HLA*": "hlasm",
         "functional": "cpp",
-        "new": "cpp"
-    }
+        "new": "cpp",
+        "string": "cpp",
+        "cstdlib": "cpp",
+        "*.tcc": "cpp",
+        "algorithm": "cpp"
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
